--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,33 @@
 
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+# -----------------------
+# Database
+# -----------------------
 spring.datasource.url=jdbc:mysql://localhost:3306/testingsystem?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
-#spring.datasource.driverClassName=oracle.jdbc.OracleDriver
-#spring.jpa.properties.hibernate.default_schema=qldadt
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-#spring.jpa.properties.hibernate.id.new_generator_mappings=false
-#spring.data.rest.default-page-size=1000
-#spring.data.rest.max-page-size=1000
-#
+# -----------------------
+# Naming entity mapping table in SQL
+# -----------------------
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-logging.level.org.hibernate.SQL=debug
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.time_zone  =UTC
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-#
-spring.jpa.generate-ddl=true
-
+# -----------------------
+# Show sql
+# -----------------------
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.web=DEBUG
+spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
 
-# config page
-#spring.data.web.pageable.default-page-size=5
+# -----------------------
+# swagger 2
+# -----------------------
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+
 spring.data.web.pageable.one-indexed-parameters=true
-#spring.data.web.pageable.page-parameter=pageNumber
-#spring.data.web.pageable.size-parameter=size
-#spring.data.web.pageable.sort-parameter=sort
+
 
