--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <version>1.5.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.4.5</version>
+        </dependency>
 
 
 
