--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 # -----------------------
 # Database
 # -----------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/testingsystem?serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/testingsystem?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/testingsystem
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -10,7 +11,7 @@ spring.datasource.password=root
 # Naming entity mapping table in SQL
 # -----------------------
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+#spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # -----------------------
 # Show sql
