--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,9 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.data.web.pageable.one-indexed-parameters=true
 
-
+# -----------------------
+# no handler exception
+# -----------------------
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+spring.mvc.static-path-pattern=/swagger*
