--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,10 @@ spring.data.web.pageable.one-indexed-parameters=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 spring.mvc.static-path-pattern=/swagger*
+
+# -----------------------
+# default username password
+# -----------------------
+spring.security.user.name=test
+spring.security.user.password=test
+
