--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- oauth2-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
